--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-<h1>Create an article</h1>
-
+<h1>Edit existing article</h1>
 <% if @article.errors.any? %>
     <h2>The following errors prevented article from being created</h2>
     <ul>
@@ -13,7 +12,7 @@
     </ul>
 <% end %>
 
-<%= form_for @article ,url: articles_path do |f| %>
+<%= form_for @article do |f| %>
     <p>
       <%= f.label :title %></br>
       <%= f.text_field :title %>
@@ -24,8 +23,10 @@
     </p>
     <%= f.submit %>
 <% end %>
+
 <p>
   <%= link_to "Back to articles listing", articles_path %>
 </p>
+
 </body>
 </html>
