--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,12 @@
 
 <h1>Showing selected article</h1>
 <p>Title: <%= @article.title%></p>
-<p>Article: <%= @article.description%></p>
+<p>Description: <%= @article.description%></p>
+
+<p>
+  <%= link_to "Back to articles listing", articles_path %>
+  <%= link_to "Edit this article", edit_article_path(@article) %>
+</p>
+
 </body>
 </html>
