--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,29 +3,7 @@
 <body>
 
 <h1>Create an article</h1>
+<%= render 'form' %>
 
-<% if @article.errors.any? %>
-    <h2>The following errors prevented article from being created</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg%></li>
-      <% end %>
-    </ul>
-<% end %>
-
-<%= form_for @article ,url: articles_path do |f| %>
-    <p>
-      <%= f.label :title %></br>
-      <%= f.text_field :title %>
-    </p>
-    <p>
-      <%= f.label :description %></br>
-      <%= f.text_area :description %>
-    </p>
-    <%= f.submit %>
-<% end %>
-<p>
-  <%= link_to "Back to articles listing", articles_path %>
-</p>
 </body>
 </html>
