--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,6 +61,7 @@
 <nav>
   <ul>
     <li><%= link_to 'About', about_path%></li>
+    <li><%= link_to 'Alpha Blog', articles_path%></li>
   </ul>
 </nav>
 <article>
