Create Home page and add links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,131 +3,11 @@
 <head>
   <title>AlphaBlog Home page</title>
   <meta charset="UTF-8">
-  <style>
-    body {
-      margin: 0px;
-    }
-    header {
-      background-color: black;
-      color: antiquewhite;
-      padding: 20px;
-      border: solid darkblue 2px;
-      text-align: center;
-    }
-    footer {
-      background-color: black;
-      color: antiquewhite;
-      padding: 20px;
-      border: solid darkblue 2px;
-      text-align: center;
-      font-size: 15px;
-    }
-
-    nav {
-      background-color: white;
-      color: darkblue;
-      align-content: center;
-      float: left;
-      padding: 1em;
-      max-width: 160px;
-    }
-
-    article {
-      background: darkblue;
-      color: white;
-      margin: 0 0 0 170px;
-      border: solid black 2px;
-    }
-
-    nav ul {
-      list-style-type: none;
-    }
-
-    nav ul a {
-      display: block;
-      text-decoration: none;
-      background-color: white;
-    }
-
-    nav ul a:hover {
-      background-color: white;
-    }
-  </style>
 </head>
 <body>
-<header>
-  <h1>Home Page</h1>
-</header>
-<nav>
-  <ul>
-    <li><%= link_to 'About', about_path%></li>
-    <li><%= link_to 'Alpha Blog', articles_path%></li>
-  </ul>
-</nav>
-<article>
-    <pre>	Router radi sa config/routes.rb fileom i putem njega odlučuje u koji
-      controller šalje zahtjev
-
-      u direktoriju app/assets spremaju se sve slike koje se koriste
-      na stranici, svi .js(JavaScript) , svi styleSheetsi koji su pisani u css-upisivanjem
-
-      u direktoriju app/models spremaju se svi modeli(back-end)
-      u direktoriju app/controllers spremaju se svi kontroleri(komunikacija između fronta backa i zahtjeva)
-      u direktoriju app/views spremaju se svi viewi koji se šalju korisniku
-
-      migration files su fileovi koji naša aplikacija koristi za stvaranje tablea u databasu
-      jedan od migration fileova je db/seeds.rb
-
-      database.yml u direktoriju config sadrži način na koji pristupamo bazi(MySql,Sqlite3,...)
-
-      u log ulaze sve što server šalje (ne podatci nego zaglavlja u HTTPu)
-
-      test file se koristi za testove i unutra se spremaju
-
-      Gemfile unutra se nalazi svi gemovi koji se skidaju iz
-      sourcea i navode se nakon ključne riječi gem
-
-      Gemfile.lock-u se mijenja sadržaj kada se mijenja i Gemfile.rbu
-
-      README.rdoc se koristi kako bi korisniku objasnili relevanten stvari oko aplikacije
-      -kako se koristi
-      -neke requiermente itd
-
-      RAILS SE KORISTI I ZA BACK I ZA FRONT I SPOJ IZMEĐU NJIH
-
-      //dalje priča o teoriji mreža
-
-      Paljenje servera
-      -u cmdu se pozicioniraš u projekt
-      -pozoveš rails server
-
-      Promjene na server stavljaju se nakon što završi kodiranje i
-      nakon što je sve istestirano.
-      Prije toga testira se na localhostu ili sličnima
-
-      Mi ćemo koristiti huroku za server
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Dinamo Zagreb
-    </pre>
-</article>
-<footer>By Davor Češljaš</footer>
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign up now!","#", class: "btn btn-primary btn-lg btn-jmbtrn"%>
+</div>
 </body>
 </html>
