--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,5 +9,6 @@
   <h1>Alpha Blog</h1>
   <%= link_to "Sign up now!","#", class: "btn btn-primary btn-lg btn-jmbtrn"%>
 </div>
+<%= render 'layouts/navigation'%>
 </body>
 </html>
