Style form partial

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,8 +1,8 @@
 <DOCTYPE! html>
 <html>
 <body>
-
-<h1>Edit existing article</h1>
+<%= render 'layouts/navigation'%>
+<h1 align="center">Edit existing article</h1>
 <%= render 'form' %>
 </body>
 </html>
