--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,8 @@
 <DOCTYPE! html>
 <html>
 <body>
-
-<h1>Create an article</h1>
+<%= render 'layouts/navigation'%>
+<h1 align="center">Create an article</h1>
 <%= render 'form' %>
 
 </body>
