--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,4 +55,10 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+.article-actions {
+  border-top: 1px solid #eaeaea;
+}
 
+.description {
+  margin-top: 0;
+}
