Style articles listing page

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,8 @@
 <html>
 <body>
 <%= render 'layouts/navigation'%>
+<%= render 'layouts/messages' %>
+
 <h1 align="center">Create an article</h1>
 <%= render 'form' %>
 
