--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,5 +10,6 @@
   <%= link_to "Sign up now!","#", class: "btn btn-primary btn-lg btn-jmbtrn"%>
 </div>
 <%= render 'layouts/navigation'%>
+<%= render 'layouts/messages' %>
 </body>
 </html>
