--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,8 @@
 <DOCTYPE! html>
 <html>
 <body>
+<%= render 'layouts/navigation'%>
+<%= render 'layouts/messages' %>
 
 <h2 align="center">Title: <%= @article.title%></h2>
 <div class="well col-xs-8 col-xs-offset-2">
@@ -9,9 +11,9 @@
   <hr>
   <%= simple_format(@article.description)%>
   <div class="article-actions">
-    <%= link_to "Back to articles listing", articles_path, class: "btn btn-xs btn-primary"%>
+    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success"%>
     <%= link_to "Delete this article", article_path(@article), method: :delete, data: { confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-    <%= link_to "View all articles", edit_article_path(@article), class: "btn btn-xs btn-success" %>
   </div>
 </div>
 
