--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,111 +1,13 @@
 <DOCTYPE! html>
 <html>
-<head>
-  <title>AlphaBlog About page</title>
-  <meta charset="UTF-8">
-  <style>
-    body {
-      margin: 0px;
-    }
-    header {
-      background-color: black;
-      color: antiquewhite;
-      padding: 20px;
-      border: solid darkblue 2px;
-      text-align: center;
-    }
-    footer {
-      background-color: black;
-      color: antiquewhite;
-      padding: 20px;
-      border: solid darkblue 2px;
-      text-align: center;
-      font-size: 15px;
-    }
-
-    nav {
-      background-color: white;
-      color: darkblue;
-      align-content: center;
-      float: left;
-      padding: 1em;
-      max-width: 160px;
-    }
-
-    article {
-      background: darkblue;
-      color: white;
-      margin: 0 0 0 170px;
-      border: solid black 2px;
-    }
-
-    nav ul {
-      list-style-type: none;
-    }
-
-    nav ul a {
-      display: block;
-      text-decoration: none;
-      background-color: white;
-    }
-
-    nav ul a:hover {
-      background-color: white;
-    }
-  </style>
-</head>
 <body>
-  <header>
-    <h1>About Page</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><%= link_to 'Home', root_path%></li>
-    </ul>
-  </nav>
-  <article>
-    <pre>	Gemovi su kao eksterne klase koje nisu dio jre-a niti dio java.lang paketa
-      u javi npr commons itd
+  <div class="center jumbotron about-title"><h1><%= link_to "About Alpha Blog", root_path%></h1></div>
+  <div class="well col-xs-10 col-xs-offset-1 center">
+    <pre id="about">This is the about page for Alpha Blog web-site. The Alpha Blog is a blog where
+    everyone can write what ever they want. Just click on New article or go to articles
+    to read other persons articles.
 
-      Stranica za gemove: rubygems.org/gems
-      Stranica za rails: rubyonrails.org
-      guides.rubyonrails.org
-
-      Stvaranje aplikacije kroz cmd upisivanjem
-      rails new appName
-
-      bundler je gem koji ide na stranicu rubygems.org
-      i vadi van defaultne gemove koji dolaze sa pozivom gornje
-      naredbe
-
-      Rails koristi oblikovni obrazac MVC (model,view controller)
-      dakle rails na zahtjev korisnika koristi router koji pristupa
-      određenom controlleru, ovisno o stranici koju smo zatražili
-      nakon toga kontroler ili pristupa bazi podataka i back-endu
-      (ovdje se koristi pojam model(slično Swingu))
-      ili rendera stranicu putem Viewa(isto tako slično Swingu)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      Albert Einstain
-    </pre>
-  </article>
-  <footer>By Davor Češljaš</footer>
+      Thanks for using Alpha Blog. To go to home page click on the title. Davor Češljaš</pre>
+  </div>
 </body>
 </html>
