Add edit update funcionallity and partial

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,10 +5,9 @@
 <%= render 'layouts/navigation'%>
 
 <h1 align = "center">
-  SignUp for Alpha Blog
+  Edit Alpha Blog Account
 </h1>
 
 <%= render 'form'%>
-
 </body>
 </html>
