--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,12 @@
 <%= render 'layouts/navigation'%>
 
 <h1 align="center">Listing all articles</h1>
-
+<div align = "center">
+  <%= will_paginate %>
+</div>
 <%= render 'article', obj: @articles %>
+<div align = "center">
+  <%= will_paginate %>
+</div>
 </body>
 </html>
