--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
 
 <h1 align="center">All Alpha Bloggers</h1>
 <div align="center">
+  <%= will_paginate %>
   <% @users.each do |user| %>
       <ul class="listing">
         <div class = "row">
@@ -24,7 +25,7 @@
         </div>
       </ul>
   <% end %>
-
+  <%= will_paginate %>
 </div>
 
 </body>
