Complete authentication system

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <html>
 <body>
 <%= render 'layouts/navigation'%>
+<%= render 'layouts/messages'%>
 
 <h1 align="center">Welcome to <%= @user.username%>'s page</h1>
 <div class="row">
