--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,7 +1,6 @@
 <DOCTYPE! html>
 <html>
 <body>
-<%= render 'layouts/messages' %>
 
 <% obj.each do |a| %>
     <div class = "row">
@@ -20,10 +19,12 @@
 
             </div>
           </div>
-          <div class="article-actions">
-            <%= link_to "Edit this article", edit_article_path(a), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete this article", article_path(a), method: :delete, data: { confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
-          </div>
+          <% if logged_in? && current_user == a.user %>
+            <div class="article-actions">
+              <%= link_to "Edit this article", edit_article_path(a), class: "btn btn-xs btn-primary" %>
+              <%= link_to "Delete this article", article_path(a), method: :delete, data: { confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
