--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
 <html>
 <body>
 <%= render 'layouts/navigation'%>
+<%= render 'layouts/messages' %>
 
 <h1 align="center">Listing all articles</h1>
 <div align = "center">
