--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <body>
 <div class="center jumbotron">
   <h1>Alpha Blog</h1>
-  <%= link_to "Sign up now!","#", class: "btn btn-primary btn-lg btn-jmbtrn"%>
+  <%= link_to "Sign up now!",signup_path, class: "btn btn-primary btn-lg btn-jmbtrn"%>
 </div>
 <%= render 'layouts/navigation'%>
 <%= render 'layouts/messages' %>
