--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= yield %>
 
   <%= render 'layouts/footer' %>
-  <%= debug(params) %>
+  <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
